added greyscale option and ensured that all tags are unique

--- a/control-panel.html
+++ b/control-panel.html
@@ -1,47 +1,53 @@
-<div id="control-panel-content">
-  <h3>Curtain Control</h3>
-  <label>
-    <input type="checkbox" id="toggle-images" checked />
-    Images <i class="icon"></i>
-  </label>
-  <label>
-    <input type="checkbox" id="toggle-backgrounds" checked />
-    Backgrounds <i class="icon"></i>
-  </label>
-  <label>
-    <input type="checkbox" id="toggle-videos" checked />
-    Videos <i class="icon"></i>
-  </label>
-  <label>
-    <input type="checkbox" id="toggle-svgs" checked />
-    SVGs <i class="icon"></i>
-  </label>
+<div id="curtain-control-panel">
+  <div id="curtain-control-panel-content">
+    <h3>Curtain Control</h3>
+    <label class="curtain-label">
+      <input type="checkbox" id="toggle-images" checked />
+      Images <i class="curtain-icon"></i>
+    </label>
+    <label class="curtain-label">
+      <input type="checkbox" id="toggle-backgrounds" checked />
+      Backgrounds <i class="curtain-icon"></i>
+    </label>
+    <label class="curtain-label">
+      <input type="checkbox" id="toggle-videos" checked />
+      Videos <i class="curtain-icon"></i>
+    </label>
+    <label class="curtain-label">
+      <input type="checkbox" id="toggle-svgs" checked />
+      SVGs <i class="curtain-icon"></i>
+    </label>
+    <label class="curtain-label">
+      <input type="checkbox" id="toggle-greyscale" />
+      Greyscale <i class="curtain-icon"></i>
+    </label>
 
-  <div id="control-buttons">
-    <a
-      id="donate"
-      href="https://www.paypal.com/donate/?hosted_button_id=C3P2E52UHSS74"
-      class="button"
-      target="_blank"
-    >
-      Buy me a coffee
-    </a>
-  </div>
+    <div id="curtain-control-buttons">
+      <a
+        id="curtain-donate"
+        href="https://www.paypal.com/donate/?hosted_button_id=C3P2E52UHSS74"
+        class="curtain-button"
+        target="_blank"
+      >
+        Buy me a coffee
+      </a>
+    </div>
 
-  <div id="close-panel" class="close-button">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-      width="24"
-      height="24"
-    >
-      <path
-        d="M6 18L18 6M6 6l12 12"
-        stroke="white"
-        stroke-width="2"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-      />
-    </svg>
+    <div id="curtain-close-panel" class="curtain-close-button">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        width="24"
+        height="24"
+      >
+        <path
+          d="M6 18L18 6M6 6l12 12"
+          stroke="white"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+      </svg>
+    </div>
   </div>
 </div>
